--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: '2.4'
 services:
   # Description: This container will migrate the Postgres `frontend`,
   # `codeintel`, and `codeinsights` databases
@@ -14,7 +13,7 @@ services:
   migrator:
     container_name: migrator
     image: 'index.docker.io/sourcegraph/migrator:5.10.0@sha256:fc2b0c4ff82ebca70dd19f48ebb8378eb00d41959466b099c15870e2cacf80d2'
-    cpus: 0.5
+    #cpus: 0.5
     mem_limit: '500m'
     command: ['up']
     environment:
@@ -56,7 +55,7 @@ services:
   #
   # Disk: 1GB / persistent SSD
   # Ports exposed to other Sourcegraph services: none
-  # Ports exposed to the public internet: 80 (HTTP) and 443 (HTTPS)
+  # Ports exposed to the public internet: 8888 (HTTP) and 4433 (HTTPS)
   #
   # Sourcegraph ships with a few builtin templates that cover common HTTP/HTTPS configurations:
   # - HTTP only (default)
@@ -70,7 +69,7 @@ services:
   caddy:
     container_name: caddy
     image: 'index.docker.io/sourcegraph/caddy:5.10.0@sha256:c96d066d0fc11c21b734b4dd8433adc0d4e89a2aebb6db015a528c8b9dfd5e85'
-    cpus: 4
+    #cpus: 4
     mem_limit: '4g'
     environment:
       - 'XDG_DATA_HOME=/caddy-storage/data'
@@ -106,8 +105,8 @@ services:
       # Uncomment / update the following line when using HTTPS with custom certificates
       # - '/LOCAL/KEY/PATH.key:/sourcegraph.key'
     ports:
-      - '0.0.0.0:80:80'
-      - '0.0.0.0:443:443'
+      - '0.0.0.0:8888:80'
+      - '0.0.0.0:4433:443'
     networks:
       - sourcegraph
     restart: always
@@ -125,7 +124,7 @@ services:
   sourcegraph-frontend-0:
     container_name: sourcegraph-frontend-0
     image: 'index.docker.io/sourcegraph/frontend:5.10.0@sha256:ad4d6e08adc455f3bd21a8d5bb112216d89f5568f39a07d5d3629ff65d93bab3'
-    cpus: 4
+    #cpus: 4
     mem_limit: '8g'
     environment:
       - DEPLOY_TYPE=docker-compose
@@ -181,7 +180,7 @@ services:
   sourcegraph-frontend-internal:
     container_name: sourcegraph-frontend-internal
     image: 'index.docker.io/sourcegraph/frontend:5.10.0@sha256:ad4d6e08adc455f3bd21a8d5bb112216d89f5568f39a07d5d3629ff65d93bab3'
-    cpus: 4
+    #cpus: 4
     mem_limit: '8g'
     environment:
       - DEPLOY_TYPE=docker-compose
@@ -228,7 +227,7 @@ services:
   gitserver-0:
     container_name: gitserver-0
     image: 'index.docker.io/sourcegraph/gitserver:5.10.0@sha256:55d27f452ea3c31b1c4825f34b5acfa4fe02cb348787c828eae44680707ba7c4'
-    cpus: 4
+    #cpus: 4
     mem_limit: '8g'
     environment:
       - 'SRC_FRONTEND_INTERNAL=sourcegraph-frontend-internal:3090'
@@ -251,7 +250,7 @@ services:
   zoekt-indexserver-0:
     container_name: zoekt-indexserver-0
     image: 'index.docker.io/sourcegraph/search-indexer:5.10.0@sha256:684af01ca03734c50740b94b513c128e55489f21b2976d20e81f675a5f49bcff'
-    cpus: 8
+    #cpus: 8
     mem_limit: '16g'
     environment:
       - 'HOSTNAME=zoekt-webserver-0:6070'
@@ -274,7 +273,7 @@ services:
   zoekt-webserver-0:
     container_name: zoekt-webserver-0
     image: 'index.docker.io/sourcegraph/indexed-searcher:5.10.0@sha256:04ddb2012406c8cdc04749254194bea62bd5ef4c4adbd0100089afd8665e6084'
-    cpus: 8
+    #cpus: 8
     mem_limit: '50g'
     environment:
       - 'HOSTNAME=zoekt-webserver-0:6070'
@@ -301,7 +300,7 @@ services:
   searcher-0:
     container_name: searcher-0
     image: 'index.docker.io/sourcegraph/searcher:5.10.0@sha256:731c80ef73b171dbe3e79fa5992236df70bc1f7c489b0a7d5139cfed7260f761'
-    cpus: 2
+    #cpus: 2
     mem_limit: '2g'
     environment:
       - 'SRC_FRONTEND_INTERNAL=sourcegraph-frontend-internal:3090'
@@ -325,7 +324,7 @@ services:
   precise-code-intel-worker:
     container_name: precise-code-intel-worker
     image: 'index.docker.io/sourcegraph/precise-code-intel-worker:5.10.0@sha256:24c5a52c046fdbe9d923b3d69ad561949f021ba0a31858784c3afc7294c7096f'
-    cpus: 2
+    #cpus: 2
     mem_limit: '4g'
     environment:
       - 'SRC_FRONTEND_INTERNAL=sourcegraph-frontend-internal:3090'
@@ -351,7 +350,7 @@ services:
   repo-updater:
     container_name: repo-updater
     image: 'index.docker.io/sourcegraph/repo-updater:5.10.0@sha256:1a4cfe362f430166f961a72a27edde58cb97536d424a99e41a1bf159960e37cd'
-    cpus: 4
+    #cpus: 4
     mem_limit: '4g'
     environment:
       - 'SRC_FRONTEND_INTERNAL=sourcegraph-frontend-internal:3090'
@@ -371,7 +370,7 @@ services:
   worker:
     container_name: worker
     image: 'index.docker.io/sourcegraph/worker:5.10.0@sha256:2f64d6c46a26d0502754e8d37614c2d5aeb1174d0945296e214185f2c13014a9'
-    cpus: 4
+    #cpus: 4
     mem_limit: '4g'
     environment:
       - 'SRC_FRONTEND_INTERNAL=sourcegraph-frontend-internal:3090'
@@ -397,7 +396,7 @@ services:
   syntect-server:
     container_name: syntect-server
     image: 'index.docker.io/sourcegraph/syntax-highlighter:5.10.0@sha256:d4398f091fd32508b32bfae59c2ec2ea00f6bf8c95ebb7e7dddf28288bca34cf'
-    cpus: 4
+    #cpus: 4
     mem_limit: '6g'
     healthcheck:
       test: "wget -q 'http://127.0.0.1:9238/health' -O /dev/null || exit 1"
@@ -418,7 +417,7 @@ services:
   symbols-0:
     container_name: symbols-0
     image: 'index.docker.io/sourcegraph/symbols:5.10.0@sha256:718b7c0be30715c2e199865227bcec8afe0dbda87146fd2d85ccc86451799e31'
-    cpus: 2
+    #cpus: 2
     mem_limit: '4g'
     environment:
       - 'SRC_FRONTEND_INTERNAL=sourcegraph-frontend-internal:3090'
@@ -444,7 +443,7 @@ services:
   prometheus:
     container_name: prometheus
     image: 'index.docker.io/sourcegraph/prometheus:5.10.0@sha256:762cdd16736f3abf4865c468b87d59c12dbcaa671b2450df43cb56cfc8dda5af'
-    cpus: 4
+    #cpus: 4
     mem_limit: '8g'
     volumes:
       - 'prometheus-v2:/prometheus'
@@ -471,7 +470,7 @@ services:
   grafana:
     container_name: grafana
     image: 'index.docker.io/sourcegraph/grafana:5.10.0@sha256:91a911a1682b53b025394b1096f6b7c0108554520dd549168a9d6281b810f417'
-    cpus: 1
+    #cpus: 1
     mem_limit: '1g'
     volumes:
       - 'grafana:/var/lib/grafana'
@@ -492,7 +491,7 @@ services:
   cadvisor:
     container_name: cadvisor
     image: 'index.docker.io/sourcegraph/cadvisor:5.10.0@sha256:26767f32ffeaf4e3cfba699c34951f49ac8312cbca4dc36609c3bec3cd2a2d8e'
-    cpus: 1
+    #cpus: 1
     mem_limit: '1g'
     # You may set `privileged` to `false and `cadvisor` will run with reduced privileges.
     # `cadvisor` requires root privileges in order to display provisioning metrics.
@@ -525,7 +524,7 @@ services:
   node-exporter:
     container_name: node-exporter
     image: 'index.docker.io/sourcegraph/node-exporter:5.10.0@sha256:f0c08bdefaa90f85aad5b04c7a72f34ebade031ac23e23ea40969c78e3d8cbc9'
-    cpus: .5
+    #cpus: .5
     mem_limit: '1g'
     pid: 'host'
     volumes:
@@ -554,7 +553,7 @@ services:
   pgsql:
     container_name: pgsql
     image: 'index.docker.io/sourcegraph/postgresql-16:5.10.0@sha256:3605d1f49c24518ecbbae57db89aaaea46664db1235e5eb7b83ca229cc471358'
-    cpus: 4
+    #cpus: 4
     mem_limit: '4g'
     shm_size: '1g'
     healthcheck:
@@ -582,7 +581,7 @@ services:
   pgsql-exporter:
     container_name: pgsql-exporter
     image: 'index.docker.io/sourcegraph/postgres_exporter:5.10.0@sha256:318706b084bd485aa6eb0d61f7d66d915db8b3054e651d5b7114ff84343acc24'
-    cpus: 0.1
+    #cpus: 0.1
     mem_limit: '50m'
     networks:
       - sourcegraph
@@ -601,7 +600,7 @@ services:
   codeintel-db:
     container_name: codeintel-db
     image: 'index.docker.io/sourcegraph/postgresql-16:5.10.0@sha256:3605d1f49c24518ecbbae57db89aaaea46664db1235e5eb7b83ca229cc471358'
-    cpus: 4
+    #cpus: 4
     mem_limit: '4g'
     shm_size: '1g'
     healthcheck:
@@ -629,7 +628,7 @@ services:
   codeintel-db-exporter:
     container_name: codeintel-db-exporter
     image: 'index.docker.io/sourcegraph/postgres_exporter:5.10.0@sha256:318706b084bd485aa6eb0d61f7d66d915db8b3054e651d5b7114ff84343acc24'
-    cpus: 0.1
+    #cpus: 0.1
     mem_limit: '50m'
     networks:
       - sourcegraph
@@ -648,7 +647,7 @@ services:
   codeinsights-db:
     container_name: codeinsights-db
     image: 'index.docker.io/sourcegraph/postgresql-16-codeinsights:5.10.0@sha256:fc3bc82f68abe635bb164af6b5d00ca3017a9b862ac0c930be2e8766a12ad810'
-    cpus: 4
+    #cpus: 4
     mem_limit: '2g'
     shm_size: '1g'
     environment:
@@ -681,7 +680,7 @@ services:
   codeinsights-db-exporter:
     container_name: codeinsights-db-exporter
     image: 'index.docker.io/sourcegraph/postgres_exporter:5.10.0@sha256:318706b084bd485aa6eb0d61f7d66d915db8b3054e651d5b7114ff84343acc24'
-    cpus: 0.1
+    #cpus: 0.1
     mem_limit: '50m'
     networks:
       - sourcegraph
@@ -700,7 +699,7 @@ services:
   blobstore:
     container_name: blobstore
     image: 'index.docker.io/sourcegraph/blobstore:5.10.0@sha256:075736a86c5e4cf0cc889d4e895b469eb4f8c2b094e9bc61490b10acb5dfb1dd'
-    cpus: 1
+    #cpus: 1
     mem_limit: '1g'
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://127.0.0.1:9000/']
@@ -723,7 +722,7 @@ services:
   redis-cache:
     container_name: redis-cache
     image: 'index.docker.io/sourcegraph/redis-cache:5.10.0@sha256:98d7e9bb26f2424e0ab29c026aa38460c1f9ebe65d0f26733382af65d34edac4'
-    cpus: 1
+    #cpus: 1
     mem_limit: '7g'
     volumes:
       - 'redis-cache:/redis-data'
@@ -739,7 +738,7 @@ services:
   redis-store:
     container_name: redis-store
     image: 'index.docker.io/sourcegraph/redis-store:5.10.0@sha256:e129eb8901f12a5e7d022e0de17fd69166fba4595c085e6571a2bbe95de17f16'
-    cpus: 1
+    #cpus: 1
     mem_limit: '7g'
     volumes:
       - 'redis-store:/redis-data'
@@ -754,7 +753,7 @@ services:
   otel-collector:
     container_name: otel-collector
     image: 'index.docker.io/sourcegraph/opentelemetry-collector:5.10.0@sha256:35ff98cd292bacc48834f1d261d4090d6980f497a4c1028769d4f132f6ceefc9'
-    cpus: 1
+    #cpus: 1
     mem_limit: '1g'
     networks:
       - sourcegraph
